Corrected left interface collapse function by created sibling div to #leftInterface with ID of #leftInterfaceB and moving #linesInterace into this div, then trageting the toggle function on these #leftInterface siblings. COrrected height of #boundaryHead and #linesHead.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,12 +134,12 @@ body {
     margin: 5vh 0;
 }
 
-#boundaryInterface, #linesInterface, #statsInterface, #leftInterface {
+/*#boundaryInterface, #linesInterface,*/ #statsInterface, #leftInterface, #leftInterfaceB {
     display: none;
 }
 
 #boundaryHead, #linesHead {
-    height: 37.5vh;
+    height: 42.5vh;
 }
 
 #statsHead {
